@@ -3,6 +3,7 @@
  - Assume compiler supports integral conversions in `charconv`.
  - Assume compiler supports spans, ranges, and `cmp_less` etc.
  - Retired `binarystring` and its headers.
+ - Retired result row slicing.
 7.10.1
  - Remove `-fanalyzer` option again; gcc is still broken.
  - Oops, no, minimum CMake version is not 3.28, but 3.12!
